recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:5: error: type mismatch;
 found   : List[Int]
 required: Int
		return l.tail::remove(l.tail, v);
                             ^