recursion.cons.lessons.recursion.cons.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {


	if(l.head==v)
		return l.tail::remove(l.tail, v);

	return l.head::remove(l.tail, v);
	
}